[package]
name = "cryptopals-challenges"
version = "0.1.0"
authors = ["Brian James Gillespie <brian.gillespie@workday.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
maplit = "1.0.2"
anyhow = "1.0.38"
thiserror = "1.0.23"
